unpackaged/main/default/objects/ffct__ConnectionsCustomObject__c/ffct__ConnectionsCustomObject__c.object-meta.xml
<CustomObject>
    <description>Details of a custom object referenced in a connection.</description>
    <label>Connection's Custom Object</label>
    <nameField>
        <label>ConnectionsCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection's Custom Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>