unpackaged/main/default/objects/ffct__ConnectionsCustomObject__c/fields/ffct__Connection__c.field-meta.xml
<CustomField>
    <fullName>ffct__Connection__c</fullName>
    <label>Object's Connection</label>
    <referenceTo>ffct__Connection__c</referenceTo>
    <relationshipName>ConnectionsCustomObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>