unpackaged/main/default/objects/ffct__ConnectionsCustomObject__c/fields/ffct__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ffct__Namespace_Prefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>