unpackaged/main/default/objects/ffct__ConnectionsCustomObject__c/fields/ffct__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>ffct__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>